@@ -18,6 +18,7 @@ avefile      = FNAME_PEDS_AVE
 rmsfile      = FNAME_PEDS_RMS
 #maskfile     = FNAME_PEDS_MSK
 hotpixfile   = FNAME_PEDS_HOT
+thr_rms_min  = THR_RMS_HOTPIX_MIN
 thr_rms_ADU  = THR_RMS_HOTPIX
 thr_min_ADU  = THR_MIN_HOTPIX
 thr_max_ADU  = THR_MAX_HOTPIX
