@@ -17,6 +17,7 @@ rmsfile         = FNAME_PEDS_RMS
 #maskfile       = FNAME_HOTPIX_MASK
 hotpixfile      = FNAME_HOTPIX_MASK
 ftype           = FTYPE
+thr_rms_min     = THR_RMS_HOTPIX_MIN
 thr_rms_ADU     = THR_RMS_HOTPIX
 thr_min_ADU     = THR_MIN_HOTPIX
 thr_max_ADU     = THR_MAX_HOTPIX
