@@ -72,7 +72,8 @@ class GUIConfigPars ( Frame ) :
         self.lab_dark_start = QtGui.QLabel('Event start:') 
         self.lab_dark_end   = QtGui.QLabel('end:') 
         self.lab_dark_scan  = QtGui.QLabel('scan:') 
-        self.lab_rms_thr    = QtGui.QLabel('Threshold RMS, ADU:') 
+        self.lab_rms_thr_min= QtGui.QLabel('Threshold RMS MIN, ADU:') 
+        self.lab_rms_thr    = QtGui.QLabel('MAX:') 
         self.lab_min_thr    = QtGui.QLabel('Threshold MIN, ADU:') 
         self.lab_max_thr    = QtGui.QLabel('MAX:') 
         self.lab_dark_sele  = QtGui.QLabel('Selector evt code:') 
@@ -84,17 +85,19 @@ class GUIConfigPars ( Frame ) :
         self.edi_dark_end   = QtGui.QLineEdit( str( cp.bat_dark_end.value()) )
         self.edi_dark_scan  = QtGui.QLineEdit( str( cp.bat_dark_scan.value()) )
         self.edi_dark_sele  = QtGui.QLineEdit( str( cp.bat_dark_sele.value()) )
+        self.edi_rms_thr_min= QtGui.QLineEdit( str( cp.mask_rms_thr_min.value()) )
         self.edi_rms_thr    = QtGui.QLineEdit( str( cp.mask_rms_thr.value()) )
         self.edi_min_thr    = QtGui.QLineEdit( str( cp.mask_min_thr.value()) )
         self.edi_max_thr    = QtGui.QLineEdit( str( cp.mask_max_thr.value()) )
 
-        self.edi_dark_start.setValidator(QtGui.QIntValidator(0,9999999,self))
-        self.edi_dark_end  .setValidator(QtGui.QIntValidator(1,9999999,self))
-        self.edi_dark_scan .setValidator(QtGui.QIntValidator(1,9999999,self))
-        self.edi_dark_sele .setValidator(QtGui.QIntValidator(-256,256,self))
-        self.edi_rms_thr   .setValidator(QtGui.QDoubleValidator(0,65000,3,self))
-        self.edi_min_thr   .setValidator(QtGui.QDoubleValidator(0,65000,3,self))
-        self.edi_max_thr   .setValidator(QtGui.QDoubleValidator(0,65000,3,self))
+        self.edi_dark_start .setValidator(QtGui.QIntValidator(0,9999999,self))
+        self.edi_dark_end   .setValidator(QtGui.QIntValidator(1,9999999,self))
+        self.edi_dark_scan  .setValidator(QtGui.QIntValidator(1,9999999,self))
+        self.edi_dark_sele  .setValidator(QtGui.QIntValidator(-256,256,self))
+        self.edi_rms_thr_min.setValidator(QtGui.QDoubleValidator(0,65000,3,self))
+        self.edi_rms_thr    .setValidator(QtGui.QDoubleValidator(0,65000,3,self))
+        self.edi_min_thr    .setValidator(QtGui.QDoubleValidator(0,65000,3,self))
+        self.edi_max_thr    .setValidator(QtGui.QDoubleValidator(0,65000,3,self))
         #self.edi_events.setValidator(QtGui.QRegExpValidator(QtCore.QRegExp("[0-9]\\d{0,3}|end$"),self))
 
         self.cbx_deploy_hotpix = QtGui.QCheckBox('Deploy hotpix mask')
@@ -119,9 +122,11 @@ class GUIConfigPars ( Frame ) :
         self.grid.addWidget(self.edi_dark_end,      self.grid_row+5, 4)
         self.grid.addWidget(self.lab_dark_scan,     self.grid_row+5, 5)
         self.grid.addWidget(self.edi_dark_scan,     self.grid_row+5, 6)
-        self.grid.addWidget(self.lab_rms_thr,       self.grid_row+6, 0)
-        self.grid.addWidget(self.edi_rms_thr,       self.grid_row+6, 1, 1, 4)
-        self.grid.addWidget(self.cbx_deploy_hotpix, self.grid_row+6, 3, 1, 4)
+        self.grid.addWidget(self.lab_rms_thr_min,   self.grid_row+6, 0)
+        self.grid.addWidget(self.edi_rms_thr_min,   self.grid_row+6, 1, 1, 4)
+        self.grid.addWidget(self.lab_rms_thr,       self.grid_row+6, 3)
+        self.grid.addWidget(self.edi_rms_thr,       self.grid_row+6, 4, 1, 4)
+        self.grid.addWidget(self.cbx_deploy_hotpix, self.grid_row+6, 5, 1, 4)
         self.grid.addWidget(self.lab_min_thr,       self.grid_row+7, 0)
         self.grid.addWidget(self.edi_min_thr,       self.grid_row+7, 1, 1, 2)
         self.grid.addWidget(self.lab_max_thr,       self.grid_row+7, 3)
@@ -145,6 +150,7 @@ class GUIConfigPars ( Frame ) :
         self.connect( self.edi_dark_end,     QtCore.SIGNAL('editingFinished()'),  self.onEdiDarkEnd )
         self.connect( self.edi_dark_scan,    QtCore.SIGNAL('editingFinished()'),  self.onEdiDarkScan )
         self.connect( self.edi_dark_sele,    QtCore.SIGNAL('editingFinished()'),  self.onEdiDarkSele )
+        self.connect( self.edi_rms_thr_min,  QtCore.SIGNAL('editingFinished()'),  self.onEdiRmsThrMin )
         self.connect( self.edi_rms_thr,      QtCore.SIGNAL('editingFinished()'),  self.onEdiRmsThr )
         self.connect( self.edi_min_thr,      QtCore.SIGNAL('editingFinished()'),  self.onEdiMinThr )
         self.connect( self.edi_max_thr,      QtCore.SIGNAL('editingFinished()'),  self.onEdiMaxThr )
@@ -195,6 +201,7 @@ class GUIConfigPars ( Frame ) :
         self.lab_dark_end     .setStyleSheet (cp.styleLabel)
         self.lab_dark_scan    .setStyleSheet (cp.styleLabel)
         self.lab_dark_sele    .setStyleSheet (cp.styleLabel)
+        self.lab_rms_thr_min  .setStyleSheet (cp.styleLabel)
         self.lab_rms_thr      .setStyleSheet (cp.styleLabel)
         self.lab_min_thr      .setStyleSheet (cp.styleLabel)
         self.lab_max_thr      .setStyleSheet (cp.styleLabel)
@@ -211,6 +218,7 @@ class GUIConfigPars ( Frame ) :
         self.lab_dark_end    .setAlignment (QtCore.Qt.AlignRight)
         self.lab_dark_scan   .setAlignment (QtCore.Qt.AlignRight)
         self.lab_dark_sele   .setAlignment (QtCore.Qt.AlignRight)
+        self.lab_rms_thr_min .setAlignment (QtCore.Qt.AlignRight)
         self.lab_rms_thr     .setAlignment (QtCore.Qt.AlignRight)
         self.lab_min_thr     .setAlignment (QtCore.Qt.AlignRight)
         self.lab_max_thr     .setAlignment (QtCore.Qt.AlignRight)
@@ -224,6 +232,7 @@ class GUIConfigPars ( Frame ) :
         self.edi_dark_end    .setFixedWidth(80)
         self.edi_dark_scan   .setFixedWidth(80)
         self.edi_dark_sele   .setFixedWidth(80)
+        self.edi_rms_thr_min .setFixedWidth(80)
         self.edi_rms_thr     .setFixedWidth(80)
         self.edi_min_thr     .setFixedWidth(80)
         self.edi_max_thr     .setFixedWidth(80)
@@ -342,15 +351,23 @@ class GUIConfigPars ( Frame ) :
         logger.info('Set the event code for selector: %s' % str_value, __name__ )
 
 
+    def onEdiRmsThrMin(self):
+        str_value = str( self.edi_rms_thr_min.displayText() )
+        cp.mask_rms_thr_min.setValue(float(str_value))  
+        logger.info('Set hot pixel RMS MIN threshold: %s' % str_value, __name__ )
+
+
     def onEdiRmsThr(self):
         str_value = str( self.edi_rms_thr.displayText() )
         cp.mask_rms_thr.setValue(float(str_value))  
-        logger.info('Set hot pixel RMS threshold: %s' % str_value, __name__ )
+        logger.info('Set hot pixel RMS MAX threshold: %s' % str_value, __name__ )
+
 
     def onEdiMinThr(self):
         str_value = str( self.edi_min_thr.displayText() )
         cp.mask_min_thr.setValue(float(str_value))  
         logger.info('Set hot pixel MIN threshold: %s' % str_value, __name__ )
+
 
     def onEdiMaxThr(self):
         str_value = str( self.edi_max_thr.displayText() )
